<resources>
    <string name="app_name">HowManyDaysI</string>
    <string name="statistic_name">События</string>
    <string name="notification_name">Уведомление</string>
    <string name="menu_name">меню</string>
    <string name="heading_name">Сколько дней я…?</string>
    <string name="notification_in_name">уведомление в</string>
    <string name="melody_name">звук</string>
    <string name="vibration_name">вибрация</string>
    <string name="notification_time_name">время уведомления</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="record_name">Рекорд:</string>
    <string name="new_event_name">новое событие</string>
    <string name="change_event_name">изменение события</string>
    <string name="choice_icon_name">выбор специальной иконки</string>
    <string name="current_quantity_name">дни</string>
    <string name="event_name">событие</string>
    <string name="event_execution_name">выполнение событий</string>
    <string name="mark_name">отметка</string>
    <string name="change_name">изменить</string>
    <string name="delete_name">удалить</string>
    <string name="time_def">20:00</string>
    <string name="alarm_title">Отметьте события до полуночи</string>
    <string name="alarm_text">Если вы не успеете отметиться до полуночи, то это засчитается как пропуск дня</string>
    <string name="days_now_name">Текущая цепочка:</string>
    <string name="hello_message">Вы в первый раз запустили наше приложение. Перейдите во вкладку События, там вы сможете создать своё первое событие!\nВо вкладке Уведомление вы сможете настроить время уведомлений под себя.\nПриятного пользования!</string>
    <string name="hello_title">Первый запуск!</string>

</resources>
