<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baseBackground"
    android:orientation="horizontal"

    tools:context=".activity.EventItemActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/heading_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistic_name"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/heading_size"
            android:textStyle="bold"
            tools:layout_editor_absoluteY="7dp" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/event_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_start"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="@dimen/text_start"
        android:background="@android:color/white"
        android:singleLine="false"
        android:textAlignment="textStart"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_min"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <sun.bob.mcalendarview.MCalendarView

        android:id="@+id/calendar"
        android:layout_width="@dimen/calendar_width"
        android:layout_height="@dimen/calendar_height"
        android:layout_marginStart="@dimen/base_image_margin"
        android:layout_marginEnd="@dimen/base_image_margin"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_text_view" />


    <TextView
        android:id="@+id/record_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/record_name"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/quantity_days_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/quantity_days_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@android:color/transparent"
        android:text="@string/days_now_name"
        android:textAlignment="textStart"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>