
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baseBackground"
    android:orientation="horizontal"
    tools:context=".activity.NotificationActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="45dp">

        <TextView
            android:id="@+id/heading_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification_name"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/heading_size"
            android:textStyle="bold"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            tools:layout_editor_absoluteY="8dp" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/notification_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/image_margin_top"
        android:background="@android:color/transparent"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:text="@string/notification_time_name"
        android:textColor="@android:color/black"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
    <EditText
        android:id="@+id/time_text_view"
        android:layout_width="@dimen/editTextView_width"
        android:layout_height="@dimen/button_height"
        android:background="@android:color/white"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/heading_size"
        android:maxLength="5"
        android:inputType="time"
        android:onClick="timeEditTextClick"

        android:layout_marginTop="@dimen/image_margin_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notification_text_view" />


    <TextView
        android:id="@+id/vibration_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="24dp"
        android:text="@string/vibration_name"
        android:textAlignment="textStart"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_text_view" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_compat_vibration"
        android:layout_width="@dimen/switch_width"
        android:layout_height="@dimen/heading_size"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:checked="true"
        android:theme="@style/MySwitchStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_text_view" />

    <TextView
        android:id="@+id/melody_text_view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="24dp"
        android:text="@string/melody_name"
        android:textAlignment="textStart"
        android:textAllCaps="true"
        android:textColor="@android:color/black"

        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vibration_text_view" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_compat_melody"
        android:layout_width="@dimen/switch_width"
        android:layout_height="@dimen/heading_size"
        android:layout_marginTop="@dimen/base_image_margin"
        android:layout_marginEnd="24dp"
        android:checked="true"
        android:theme="@style/MySwitchStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_compat_vibration" />
    <ImageView
        android:id="@+id/start_image"
        android:layout_width="@dimen/image_width"
        android:layout_height="@dimen/image_height"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/base_image_margin"
        android:layout_marginTop="@dimen/base_image_margin"
        android:layout_marginEnd="@dimen/base_image_margin"
        android:src="@drawable/calendarr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switch_compat_melody" />

</androidx.constraintlayout.widget.ConstraintLayout>